# verify-networking-plugin

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.claude-plugin/: plugin.json
.github/workflows/: release.yml
hooks/: pre-push
scripts/: claude-launcher.sh  codex-launcher.sh  make-icon.sh
src/: checks.rs  main.rs  proxy.rs  trace.rs  ui.rs
