[package]
name = "verify-networking"
version = "0.2.0"
edition = "2021"
description = "Network pre-flight check for Claude Code and Codex CLI — startup check + per-call daemon proxy with DNS, exit IP region, and TCP connectivity verification"
license = "MIT"

[[bin]]
name = "verify-networking"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
